0025048: Wrong return value of GeomLib_Tool::Parameter